--- a/src/main/resources/templates/employee/employeeList.html
+++ b/src/main/resources/templates/employee/employeeList.html
@@ -3,15 +3,15 @@
     <h2 class="my-4">직원 리스트</h2>
 
     <div class="table-responsive table-lg">
-        <table class="table table-hover table-striped">
+        <table class="table table-hover text-center table-striped">
             <thead>
             <tr>
-                <th class="text-center"> #</th>
+                <th>번호</th>
                 <th>ID</th>
                 <th>이름</th>
                 <th>직위</th>
-                <th>연락처</th>
-                <th class="text-center"> #</th>
+                <th>이메일</th>
+                <th>관리</th>
             </tr>
             </thead>
             <tbody>
@@ -30,34 +30,43 @@
         </table>
     </div>
     <div class="table-responsive table-md">
-        <table class="table table-hover table-striped">
+        <table class="table text-center align-middle table-striped">
+            <colgroup>
+                <col style="width: 15%">   <!--번호 -->
+                <col style="width: 25%">  <!-- ID -->
+                <col style="width: 20%">  <!-- 이름 -->
+                <col style="width: 20%">  <!-- 직위-->
+                <col style="width: 25%">  <!-- 버튼 -->
+            </colgroup>
             <thead>
             <tr>
-                <th class="ps-3">#</th>
+                <th>번호</th>
                 <th>ID</th>
                 <th>이름</th>
+                <th>직위</th>
+                <th>관리</th>
             </tr>
-            <tr>
-                <th class="ps-3">직위</th>
-                <th>연락처</th>
-                <th> # </th>
-            </tr>
+<!--            <tr>-->
+<!--                <th colspan="3">이메일</th>-->
+<!--                -->
+<!--            </tr>-->
             </thead>
             <tbody>
             <th:block th:each="employee, index : ${paging}">
                 <tr>
-                    <td th:text="${employee.id}" class="ps-3">1</td>
+                    <td th:text="${employee.id}">1</td>
                     <td th:text="${employee.loginId}">ID</td>
                     <td th:text="${employee.username}">name</td>
-                </tr>
-                <tr>
-                    <td th:text="${employee.position}" class="ps-3">position</td>
-                    <td th:text="${employee.email}">phone</td>
+                    <td th:text="${employee.position}">position</td>
                     <td>
-                        <a href="#" th:href="@{/employee/{id}/edit(id=${employee.id})}" class="btn btn-sm btn-refoam px-3 me-3" role="button">수 정</a>
-                        <button type="button" th:attr="data-bs-toggle='modal', data-bs-target='#modal__' + ${employee.id}" class="btn btn-delete btn-sm px-3">삭 제</button>
+                        <button type="button" class="btn btn-sm btn-refoam mb-1"
+                                th:onclick="|location.href='@{/employee/{id}/edit(id=${employee.id})}'|">수 정</button>
+                        <button type="button" th:attr="data-bs-toggle='modal', data-bs-target='#modal__' + ${employee.id}" class="btn btn-delete btn-sm mb-1">삭 제</button>
                     </td>
                 </tr>
+<!--                <tr>-->
+<!--                    <td colspan="3" th:text="${employee.email}">phone</td>-->
+<!--                </tr>-->
             </th:block>
             </tbody>
         </table>
@@ -104,5 +113,13 @@
             </li>
         </ul>
     </nav>
+</div>
+<div layout:fragment="scripts">
+    <script th:inline="javascript">
+        window.addEventListener("DOMContentLoaded", function () {
+            /* alert 처리 */
+            [[${errorMessage != null}]] ? alert([[${errorMessage}]]) : null;
+        });
+    </script>
 </div>
 </html>
