--- a/src/main/resources/templates/material/materialList.html
+++ b/src/main/resources/templates/material/materialList.html
@@ -2,15 +2,15 @@
 <div class="container mb-5" layout:fragment="content">
     <h2 class="my-4">재고 리스트</h2>
     <div class="table-responsive table-lg">
-        <table class="table table-hover table-striped">
+        <table class="table text-center table-hover table-striped">
             <thead>
             <tr>
-                <th class="text-center"> #</th>
+                <th>번호</th>
                 <th>원재료명</th>
                 <th>수량</th>
                 <th>입고날짜</th>
                 <th>담당직원</th>
-                <th class="text-center"> #</th>
+                <th>재고관리</th>
             </tr>
             </thead>
             <tbody>
@@ -29,17 +29,17 @@
         </table>
     </div>
     <div class="table-responsive table-md">
-        <table class="table table-hover table-striped">
+        <table class="table text-center align-middle double-stripe">
             <thead>
             <tr>
-                <th class="ps-3">#</th>
+                <th>번호</th>
                 <th>원재료명</th>
                 <th>수량</th>
             </tr>
             <tr>
-                <th class="ps-3">입고날짜</th>
+                <th>입고날짜</th>
                 <th>담당직원</th>
-                <th>#</th>
+                <th>재고관리</th>
             </tr>
             </thead>
             <tbody>
@@ -53,7 +53,7 @@
                     <td th:text="${#temporals.format(material.materialDate,'yyyy-MM-dd HH:mm')}" class="ps-3">2000-00-00 00:00</td>
                     <td>관리자</td>
                     <td>
-                        <a href="#" th:href="@{/material/{id}/edit(id=${material.id})}" class="btn btn-sm btn-refoam px-3 me-3" role="button">수 정</a>
+                        <a href="#" th:href="@{/material/{id}/edit(id=${material.id})}" class="btn btn-sm btn-refoam px-3 mb-1" role="button">수 정</a>
                         <button type="button" th:attr="data-bs-toggle='modal', data-bs-target='#modal__' + ${material.id}" class="btn btn-delete btn-sm px-3">삭 제</button>
                     </td>
                 </tr>
