--- a/src/main/resources/templates/material/createMaterialForm.html
+++ b/src/main/resources/templates/material/createMaterialForm.html
@@ -18,7 +18,7 @@
                     </div>
                     <div class="mb-2">
                         <label th:for="*{materialQuantity}" class="form-label fw-bold">수량</label>
-                        <input th:field="*{materialQuantity}" class="form-control">
+                        <input th:field="*{materialQuantity}" class="form-control" type="number" placeholder="숫자를 입력하세요">
                     </div>
                     <div class="text-end">
                         <button th:type="submit" class="btn btn-refoam px-3">&emsp;입&emsp; 력&emsp;</button>
