--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -281,28 +281,19 @@ body {
     .table-font2{
         font-size:0.8em;
     }
+
+    .txt-minus{
+        text-indent: -62px;
+    }
+
+    .txt-minus-date{
+        /*text-indent: -12px;*/
+    }
 }
 @media (min-width: 999px) {
     .table-md{  display: none;
     }
 }
-/* 테이블 sm보다 작을 때 폰트, 패딩 크기 */
-@media (max-width: 520px) {
-    table td,th {
-        font-size: 0.8rem;
-    }
-
-
-    .txt-minus{
-        text-indent: -60px;
-    }
-
-    .table-responsive.table-md button,
-    .table-responsive.table-md td,
-    .table-responsive.table-md th {
-        padding: 0.25rem 0.4rem; /* 여백도 같이 줄이기 */}
-}
-
 
 
 /* 테이블 색상 영역 */
